WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
50542
[GTK] Fix GtkLauncher.c style, use webkit style
https://bugs.webkit.org/show_bug.cgi?id=50542
Summary
[GTK] Fix GtkLauncher.c style, use webkit style
Alejandro G. Castro
Reported
2010-12-05 11:46:25 PST
Use webkit style for GtkLauncher to avoid style warnings.
Attachments
Proposed patch
(15.45 KB, patch)
2010-12-05 12:20 PST
,
Alejandro G. Castro
mrobinson
: review+
Details
Formatted Diff
Diff
View All
Add attachment
proposed patch, testcase, etc.
Alejandro G. Castro
Comment 1
2010-12-05 12:20:13 PST
Created
attachment 75638
[details]
Proposed patch
Martin Robinson
Comment 2
2010-12-05 15:44:50 PST
Comment on
attachment 75638
[details]
Proposed patch Thanks!
Alejandro G. Castro
Comment 3
2010-12-06 07:51:06 PST
landed
http://trac.webkit.org/changeset/73367
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug