2010-12-06  Alejandro G. Castro  <alex@igalia.com>

Reviewed by Martin Robinson.

        [GTK] Fix GtkLauncher.c style, use webkit style
        https://bugs.webkit.org/show_bug.cgi?id=50542

        * GtkLauncher/main.c:
        (activateUriEntryCb):
        (updateTitle):
        (linkHoverCb):
        (notifyTitleCb):
        (notifyLoadStatusCb):
        (notifyProgressCb):
        (destroyCb):
        (goBackCb):
        (goForwardCb):
        (create_webViewCb):
        (webViewReadyCb):
        (closeWebViewCb):
        (createBrowser):
        (createStatusbar):
        (createToolbar):
        (createWindow):
        (main):

Canonical link: https://commits.webkit.org/63788@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@73367 268f45cc-cd09-0410-ab3c-d52691b4dbfc